# direct-rich-text-format

./: direct-rich-text-format.cabal
Haskell/: Main.hs
Haskell/Text/: RTF.hs
